--- a/modern.html
+++ b/modern.html
@@ -124,7 +124,7 @@ margin: 0px;
 <body>
   <header class="header">
 	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" height="250" width="250"/></div>
-	<div class="container" id="nav"><div class="navOption">Gallary</div><div class="navOption">FAQ</div>
+	<div class="container" id="nav"><div class="navOption">Gallary</div><a href="faq.html" style="text-decoration: none; color: white;"><div class="navOption">FAQ</div></a>
 	<div class="navOption">Contact Us</div><div class="navOption" style="margin-left: 40%; width:30vw;">Search <input type="text" style=" width: 150px;"></input> </div></div>
   </header>
   <section class="features">
