--- a/modern.html
+++ b/modern.html
@@ -4,128 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modern Landing Page</title>
-  <style type="text/css">
-  /* Reset CSS */
-
-{
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-}
-/* Global Styles */
-body {
-font-family: Arial, sans-serif;
-line-height: 1.6;
-display: flex;
-flex-direction: column;
-padding: 0px;
-margin: 0px;
-}
-
-.container {
-margin: 0px;
-padding: 0px;
-}
-
-/* Header Styles */
-.header {
-background: #f4f4f4;
-padding: 0px;
-text-align: center;
-width: 100%;
-}
-
-#nav{
-	margin: 0px;
-	width: 100%;
-	background-color: black;
-	color: white;
-	display: flex;
-	flex-direction: row;
-	justify-content: flex-start;
-	align-items: space-between;
-}
-.navOption{
-	width: 20vw;
-}
-.navOption:hover{
-	background-color: rgb(20,20,20);
-}
-
-/* Feature Styles */
-.features {
-	padding: 0px;
-	height: 60vh;
-	width: 100%;
-	margin: 0px;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-  justify-content: center;
-	background-image: url('marble-texture-background_125540-356.jpg');
-	background-repeat: repeat;
-}
-
-.feature {
-	margin-bottom: 0px;
-  padding-left: 40px;
-}
-
-#featuresImage{
-	display: block;
-	background-image: url('business-chart.jpg');
-	background-repeat: no-repeat;
-	background-size: cover;
-	width: 50vw;
-	height: 100%;
-	margin: 0px;
-}
-
-.missionStatement{
-	background: #f4f4f4;
-	text-align: center;
-	padding-left: 5vw;
-	padding-right: 5vw;
-	padding-top: 10vh;
-	padding-bottom: 10vh;
-}
-
-/* CTA Styles */
-.cta {
-background: #333;
-color: #fff;
-padding: 50px 0;
-text-align: center;
-}
-
-.btn {
-display: inline-block;
-background: #ff6600;
-color: #fff;
-padding: 10px 20px;
-text-decoration: none;
-border-radius: 5px;
-}
-
-.btn:hover {
-background: #cc5500;
-}
-
-/* Footer Styles */
-.footer {
-background: #333;
-color: #fff;
-text-align: center;
-padding: 20px 0;
-margin: 0px;
-}
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
 	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" height="250" width="250"/></div>
-	<div class="container" id="nav"><div class="navOption">Gallary</div><a href="faq.html" style="text-decoration: none; color: white;"><div class="navOption">FAQ</div></a>
-	<div class="navOption">Contact Us</div><div class="navOption" style="margin-left: 40%; width:30vw;">Search <input type="text" style=" width: 150px;"></input> </div></div>
+	<div class="container" id="nav"><div class="navOption">Gallary</div><div class="navOption" onclick="window.location='faq.html';">FAQ</div>
+	<div class="navOption" onclick="window.location='contact.html';">Contact Us</div><div class="navOption" style="margin-left: 40%; width:30vw;">Search <input type="text" style=" width: 150px;"></input> </div></div>
   </header>
   <section class="features">
 	<div class="container" id="featuresImage">
@@ -158,7 +43,7 @@ margin: 0px;
   <section class="cta">
     <div class="container">
       <h2>Ready to Get Started?</h2>
-      <a href="#" class="btn">Contact Us!</a>
+      <a href="contact.html" class="btn">Contact Us!</a>
     </div>
   </section>
   <footer class="footer">
