--- a/gallery.html
+++ b/gallery.html
@@ -14,12 +14,14 @@
   </header>
   <section id="gallery" class="gallery">
     <div class="container">
-      <img class="img" src="1.jpg" alt="1" style="height:30%; width: 30%;">
-	  <img class="img" src="2.jpg" alt="2" style="height:30%; width: 30%;">
-	  <img class="img" src="5.jpg" alt="5" style="height:30%; width: 30%;">
-	  <img class="img" src="4.jpg" alt="4" style="height:30%; width: 30%;">
-	  <img class="img" src="3.jpg" alt="3" style="height:30%; width: 30%;">
-	  <img class="img" src="6.jpg" alt="6" style="height:30%; width: 30%;">
+      <img class="img" src="1.jpg" alt="1">
+	  <img class="img" src="2.jpg" alt="2">
+	  <img class="img" src="3.jpg" alt="3">
+	</div>
+	<div class="container">
+	  <img class="img" src="4.jpg" alt="4">
+	  <img class="img" src="5.jpg" alt="5">
+	  <img class="img" src="6.jpg" alt="6">
     </div>
   </section>
   <section class="cta">
