--- a/gallery.html
+++ b/gallery.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modern Landing Page</title>
+  <title>Gallery</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
-	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" height="250" width="250"/></div>
+	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" onclick="window.location.href='modern.html';" height="50" width="50"/></div>
 	<div class="container" id="nav"><div class="navOption">Gallary</div><div class="navOption" onclick="window.location='faq.html';">FAQ</div>
 	<div class="navOption" onclick="window.location='contact.html';">Contact Us</div><div class="navOption" style="margin-left: 40%; width:30vw;">Search <input type="text" style=" width: 150px;"></input> </div></div>
   </header>
