--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
   <header class="header">
 	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" onclick="window.location.href='modern.html'" height="50" width="50"/></div>
 	<div class="container" id="nav"><a href="gallery.html"><div class="navOption">Gallary</div></a><a href="faq.html"><div class="navOption">FAQ</div></a>
-	<a href="contact.html"><div class="navOption">Contact Us</div></a><div class="navOption" style="text-align: right;">Search <input type="text" style="width: 150px;"></input> </div></div>
+	<a href="contact.html"><div class="navOption">Contact Us</div></a></div>
   </header>
   <center>
   <section class="contact-form">
