--- a/faq.html
+++ b/faq.html
@@ -11,12 +11,11 @@
 	<header class="header">
 	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" height="50" width="50"/></div>
 	<div class="container" id="nav"><div class="navOption" onclick="window.location='gallery.html';">Gallary</div><div class="navOption" onclick="window.location='faq.html';">FAQ</div>
-	<div class="navOption" onclick="window.location='contact.html';">Contact Us</div><div class="navOption" style="margin-left: 40%; width:30vw;">Search <input type="text" style=" width: 150px;"></input> </div></div>
+	<div class="navOption" onclick="window.location='contact.html';">Contact Us</div><div class="navOption" style="margin-left: 40%; width:30vw;">Search <input id="searchInput" type="text" style=" width: 150px;"></input> </div></div>
   </header>
     <header class="header">
     <div class="container">
       <h1>Frequently Asked Questions</h1>
-      <input type="text" id="searchInput" placeholder="Search...">
     </div>
   </header>
 
