--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
   <header class="header">
 	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" onclick="window.location.href='modern.html';" height="50" width="50"/></div>
 	<div class="container" id="nav"><div class="navOption">Gallary</div><div class="navOption" onclick="window.location='faq.html';">FAQ</div>
-	<div class="navOption" onclick="window.location='contact.html';">Contact Us</div><div class="navOption" style="margin-left: 40%; width:30vw;">Search <input type="text" style=" width: 150px;"></input> </div></div>
+	<div class="navOption" onclick="window.location='contact.html';">Contact Us</div><div class="navOption" style="width:30vw;"><input type="text" placeholder="Search" style=" width: 150px;"></input> </div></div>
   </header>
   <section id="gallery" class="gallery">
     <div class="container">
