--- a/contact.html
+++ b/contact.html
@@ -12,9 +12,9 @@
       border: solid black 20px;
       border-right: solid black 0px;
       border-left: solid black 0px;
-      margin: 40px;
-      width: 30vw;
-      padding: 20px;
+      margin: 5vw;
+      width: 80vw;
+      padding: 2vw;
 
     }
     form{
@@ -39,13 +39,13 @@
   <section class="contact-form">
     <form action="mailto:your_email@example.com" method="post" enctype="text/plain">
         <label for="name">Name:</label>
-        <input size="50" type="text" id="name" name="name" required>
+        <input size="40" type="text" id="name" name="name" required>
 
         <label for="email">Email:</label>
-        <input size="50" type="email" id="email" name="email" required>
+        <input size="40" type="email" id="email" name="email" required>
 
         <label for="subject">Subject:</label>
-        <input size="50" type="text" id="subject" name="subject" required>
+        <input size="40" type="text" id="subject" name="subject" required>
 
         <label for="message">Message:</label>
         <textarea style="width: 100%;" id="message" name="message" rows="10" required></textarea>
