--- a/contact.html
+++ b/contact.html
@@ -32,8 +32,8 @@
 <body>
   <header class="header">
 	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" onclick="window.location.href='modern.html'" height="75" width="75"/></div>
-	<div class="container" id="nav"><a href="gallery.html"><div class="navOption">Gallary</div></a><a href="faq.html"><div class="navOption">FAQ</div></a>
-	<a href="contact.html"><div class="navOption">Contact Us</div></a></div>
+	<div class="container" id="nav"><div class="navOption" onclick="window.location.href='gallery.html'">Gallary</div><div class="navOption" onclick="window.location.href='modern.html'">FAQ</div>
+	<div class="navOption" onclick="window.location.href='modern.html'">Contact Us</div></div>
   </header>
   <center>
   <section class="contact-form">
