fixed Gallery nav option

--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 <body>
   <header class="header">
 	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" onclick="window.location.href='modern.html'" height="75" width="75"/></div>
-	<div class="container" id="nav"><div class="navOption" onclick="window.location.href='gallery.html'">Gallary</div><div class="navOption" onclick="window.location.href='modern.html'">FAQ</div>
+	<div class="container" id="nav"><div class="navOption" onclick="window.location.href='gallery.html'">Gallery</div><div class="navOption" onclick="window.location.href='modern.html'">FAQ</div>
 	<div class="navOption" onclick="window.location.href='modern.html'">Contact Us</div></div>
   </header>
   <center>
