--- a/modern.html
+++ b/modern.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
 	<div class="container" id="nav" style="padding: 0px;"><img src="whiteOnBlackLogo.png" height="250" width="250"/></div>
-	<div class="container" id="nav"><div class="navOption" onclick="window.location='gallery.html';">Gallary</div><div class="navOption" onclick="window.location='faq.html';">FAQ</div>
+	<div class="container" id="nav"><div class="navOption" onclick="window.location='gallery.html';">Gallery</div><div class="navOption" onclick="window.location='faq.html';">FAQ</div>
 	<div class="navOption" onclick="window.location='contact.html';">Contact Us</div></div>
   </header>
   <section class="features">
